fix gap

--- a/assets/scss/components/_mainContent.scss
+++ b/assets/scss/components/_mainContent.scss
@@ -29,7 +29,7 @@
     .text-container{
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 4rem;
         margin-top: 2rem;
         flex: 1;
         .wrapper-title__text{
